2008-02-26  Olav Vitters  <olav@bkor.dhs.org>

	* configure.in: post-release bump to 2.21.93.

==================== 2.21.92 ====================

2008-02-26  Olav Vitters  <olav@bkor.dhs.org>

	* NEWS:
	* README:
	* configure.in: version 2.21.92

2008-02-25  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Require glib 2.15.6 for the g_file_has_prefix change.

2008-02-24  Olav Vitters  <olav@bkor.dhs.org>

	* applets/clock/set-timezone-dummy.c: Add set_system_timezone_async,
	needed when compiling without polkit.

	Fix bug #517685.
	Patch by Frederic Peters.

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.21.92.

==================== 2.21.91 ====================

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.21.91

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* configure.in: require gio 2.15.5

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* configure.in: we don't need gnome-vfs anymore! Free hugs for
	everyone!

2008-02-09  Vincent Untz  <vuntz@gnome.org>

	* configure.in: require gio for the panel

2008-02-09  Vincent Untz  <vuntz@gnome.org>

	* configure.in: require gio for the clock

2008-01-29  Elijah Newren <newren gmail com>

	* configure.in: post-release bump to 2.21.91.

==================== 2.21.90 ====================

2008-01-29  Elijah Newren  <newren gmail com>

	* NEWS:
	* README:
	version 2.21.90

2008-01-28  Vincent Untz  <vuntz@gnome.org>

	* configure.in: look for Locations.xml through pkg-config.
	Fix bug #509888.
	Patch by Patryk Zawadzki <patrys@pld-linux.org>

2008-01-22  Matthias Clasen  <mclasen@redhat.com>

	* configure.in:
	* icons/Makefile.am:
	* icons/48x48/*: Add a 48x48 version of gnome-panel.svg, which is
	one of the more frequently rendered svgs on the desktop.

2008-01-21  Vincent Untz  <vuntz@gnome.org>

	* configure.in: move AM_PROG_CC_C_O towards the top, to try to keep
	things readable. I know, it's not possible :-)
