@@ -1,3 +1,7 @@
+2008-02-26  Matthias Clasen  <mclasen@redhat.com>
+
+	* Makefile.am (check): Validate PolicyKit policy files.
+
 ==================== 2.21.92 ====================
 
 2008-02-20  Matthias Clasen  <mclasen@redhat.com>
