@@ -1,3 +1,8 @@
+2008-02-26  Matthias Clasen  <mclasen@redhat.com>
+
+	* configure.in: When compiling with PolicyKit support,
+	check for polkit-policy-file-validate.
+
 2008-02-26  Olav Vitters  <olav@bkor.dhs.org>
 
 	* configure.in: post-release bump to 2.21.93.
